# llama-cpp-nanobind

./: .gitignore  AGENTS.md  CLAUDE.md  CMAKE_OPTIMIZATIONS.md  CMakeLists.txt  LICENSE  Makefile  OPTIMIZATIONS.md  README.md  pyproject.toml
docs/: API.md
examples/: async_client.py  async_example.py  basic.py  batch_generate.py  ctx_test.py  fastapi_server.py  glm4_test.py  gpt_oss_custom_template.py  gpt_oss_demo.py  gpu_generate.py  mistral_demo.py  model_helper_utils.py  parallel_inference.py  qwen3_demo.py  sample_code.py  stop_strings_demo.py  streaming_demo.py  unified_demo.py
include/: README.md
lib/: README.md
models/: README.md
src/bindings/: llama_cpp.cpp
src/llama_cpp/: __init__.py  _about.py  llama.py  pool.py  unified.py
tests/: conftest.py  test_async.py  test_inference.py  test_optimizations.py  test_pool.py  test_regressions.py  test_streaming.py  test_streaming_logic.py  test_unified.py
